# voxel-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  search_active.txt  temp_orig.rs
.agents/: AGENTS.md
.cargo/: config.toml
assets/dem/: dem.json  manifest.json
assets/items/: copper_pickaxe.gltf
assets/model/: campfire.gltf  light_blub.gltf  player_model.gltf
assets/shaders/: sky.wgsl
assets/textures/: README.txt
src/: audio.rs  camera.rs  command.rs  dem.rs  electricity.rs  item.rs  light.rs  lod.rs  main.rs  network.rs  particles.rs  sky.rs  tree.rs  ui.rs  voxel.rs  weather.rs  world_save.rs
tools/: gen_sounds.py
