[package]
name = "voxel-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.19.0"
bevy_egui = "0.41.0"
noise = "0.9.0"
sysinfo = "0.39.6"
bevy_renet = { version = "5.0.0", features = ["netcode"] }
bevy_hanabi = "0.19.0"
tiff = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
fastrand = "2.5.0"
bevy_light = "0.19.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

